# spamguard

./: .env.example  .gitignore  .pylintrc  LICENSE  Makefile  NOTICE  PHASE1_REPORT.md  README.md  REFACTORING_PLAN.md  TRADEMARK.md  mypy.ini  pyproject.toml  requirements.txt  test_env.py
.github/agents/: python-quality-auditor.agent.md
benchmark/: README.md  test_emails.yaml
config/: accounts.yaml.example  blacklists.yaml.example  settings.yaml.example  system_prompt.txt
data/lists/: README.md
docs/: ARCHITECTURE.md  AUDIT.md  AUTO_TRAINING.md  BENCHMARK.md  BLACKLIST_SOURCES.md  CONFIGURATION.md  EMAIL_EXPORT_GUIDE.md  GETTING_STARTED.md  LLM.md  SETUP.md  TROUBLESHOOTING.md  UNSPAM.md
scripts/: audit_lists.py  clean_training.py  export_training_data.py  list_folders.py  load_blacklists.py  manage_lists.py  test_connection.py  train_bayesian.py  undo_restore.py  unspam.py  unspam_newsletter.py
scripts/benchmark/: model_selector.py  real_benchmark.py  spam_benchmark.py  start_benchmark.py
src/: bayesian_filter.py  config.py  constants.py  imap_utils.py  list_manager.py  ollama_client.py  spam_filter.py  spam_trainer.py  utils.py
