[project]
name = "spamguard"
version = "0.5.0"
description = "Local AI-powered email spam filter using Ollama LLMs and Bayesian pre-filtering"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Kay Beißert", email = "kay.beissert@media-garage.de"},
]
requires-python = ">=3.8"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tqdm>=4.66.1",
    "pyyaml>=6.0.1",
    "pandas>=2.0.0",
    "questionary>=2.0.0",
    "dnspython",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pylint>=3.0.3",
    "mypy>=1.0.0",
    "types-requests",
    "types-PyYAML",
    "types-tqdm",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
